2002-07-08  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* goops.scm (define-generic, define-accessor):  Make sure that
	implicit redefines only happen on top level.

	* goops.scm (define-class, define-generic, define-accessor),
	goops/stklos.scm (define-class):  Use mmacros instead of macros.

2002-07-07  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* goops/save.scm (restore): Replaced "macro" by	mmacro.

2001-10-21  Mikael Djurfeldt  <mdj@linnaeus>

	* goops.scm, goops/active-slot.scm, goops/compile.scm,
	goops/composite-slot.scm, goops/describe.scm, goops/dispatch.scm,
	goops/old-define-method.scm, goops/save.scm, goops/util.scm: Move
	module the system directives `export', `export-syntax',
	`re-export' and `re-export-syntax' into the `define-module' form.
	This is the recommended way of exporting bindings.

2001-08-25  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am, goops/Makefile.am: (AUTOMAKE_OPTIONS): Change
	"foreign" to "gnu".

2001-07-29  Marius Vollmer  <mvo@zagadka.ping.de>

	* goops/dispatch.scm (hashset-index): Renumbered, since the vcell
	slot of structs has been removed.

2001-07-18  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* goops/util.scm: Updated copyright notice.

2001-07-17  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* goops/save.scm: Use `re-export' instead of `export' when
	re-exporting `make-unbound'.

2001-06-05  Marius Vollmer  <mvo@zagadka.ping.de>

	* goops.scm: Use `re-export' instead of `export' when re-exporting
	`class-of'.

2001-05-19  Marius Vollmer  <mvo@zagadka.ping.de>

	* goops.scm: Call `%init-goops-builtins' instead of using the
	`(oop goops goopscore)' module.

2001-05-10  Marius Vollmer  <mvo@zagadka.ping.de>

	* goops/compile.scm (compile-method): Insert comment that
	`procedure-source' can not be guaranteed to be reliable or
	efficient.

2001-05-05  Marius Vollmer  <mvo@zagadka.ping.de>

	* goops.scm (initialize-object-procedure): Use
	`valid-object-procedure?' instead of explicit tag magic.