@@ -1,3 +1,8 @@
+2002-07-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
+	* goops.scm (define-class):  Make sure that define-class will
+	continue to work when mmacros are expanded before execution.
+
 2002-07-08  Dirk Herrmann  <D.Herrmann@tu-bs.de>
 
 	* goops.scm (define-generic, define-accessor):  Make sure that
